Remove Java OPTs not supported by Java 8 any more